--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   dartz: ^0.10.1
   internet_connection_checker: ^1.0.0+1
   shared_preferences: ^2.2.0
+  flutter_bloc: ^8.1.3
+  flutter_spinkit: ^5.2.0
+  get_it: ^7.6.0
 
 dev_dependencies:
   flutter_test:
