--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_spinkit: ^5.2.0
   get_it: ^7.6.0
+  dio: ^5.2.1+1
 
 dev_dependencies:
   flutter_test:
